<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/lly_login_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.inventoryfragment.SplashActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:id="@+id/content">

    <TextView
        android:id="@+id/txvSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/txv_sign_in_margin"
        android:text="@string/sign_in"
        android:textAppearance="@style/LoginTitle"
        />

    <TextView
        android:id="@+id/txvUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_or_email"
        android:textAppearance="@style/LoginTheme"
        />

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:inputType="text"
        android:padding="@dimen/editext_padding"
        android:textAppearance="@style/Widget.Editext"
        android:layout_marginBottom="@dimen/txv_user_margin"
        android:textAlignment="center"
        android:text="usuario"
        />

    <TextView
        android:id="@+id/txvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="@style/LoginTheme"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:inputType="textPassword"
        android:padding="@dimen/editext_padding"
        android:textAppearance="@style/Widget.Editext"
        android:textAlignment="center"
        android:text="ContraseñaEjemplo1"
        />

    <LinearLayout
        android:id="@+id/llSignUpOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/ll_remember_margin">

        <CheckBox
            android:id="@+id/chkRemember"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/remember_me"
            android:theme="@style/CheckBox_RememberMe"
            />

        <TextView
            android:id="@+id/txvSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_weight="1"
            android:clickable="true"
            android:textAlignment="viewEnd"
            android:textAppearance="@android:style/TextAppearance.Small.Inverse"
            />

    </LinearLayout>
    <!--
    Cuidado al indicar el margen en un estilo y en la etiqueta,
    porque se redibuja el componente,
    con lo cuál se carga de trabajo a la GPU
    -->
    <Button
        style="@style/Widget.Button.Transparent"
        android:id="@+id/btnSignIn"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/sign_in_button_width"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background="@color/colorFacebook"
        android:textAppearance="@style/LoginTheme"
        android:layout_marginBottom="@dimen/txv_sign_up_margin"
    />

    <Button
        android:id="@+id/btnGoogleSignIn"
        style="@style/Widget.Button.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_google"
        android:drawableLeft="@mipmap/ic_google"
        android:drawableStart="@mipmap/ic_google"
        android:background="@color/colorGoogle"
        android:textAppearance="@style/LoginTheme"
        android:layout_marginBottom="@dimen/txv_google_margin"
        />

    <Button
        android:id="@+id/btnFacebookSignIn"
        style="@style/Widget.Button.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_facebook"
        android:drawableLeft="@mipmap/ic_facebook"
        android:drawableStart="@mipmap/ic_facebook"
        android:background="@color/colorFacebook"
        android:textAppearance="@style/LoginTheme"
        />

</LinearLayout>
